# swordle

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  createcachetables.bat  manage.py  pyproject.toml  requirements.txt  setup.cfg  venv.bat
basic-site/: game.html  index.html  script.js  style.css
cpu_player/: cpu_player.py  words.py
game_model/: custom_types.py
game_model/dto/: game_state.py
game_model/json_interfaces/: true_state.py  view_state.py
game_server/: __init__.py  apps.py  consumers.py  game_state.py  message_type.py  routing.py  urls.py  views.py
game_server/static/: words.txt
game_server/static/scripts/: script.js
game_server/static/styles/: style.css
game_server/templates/game_server/: chat.html  game.html  index.html
swordle/: asgi.py  settings.py  urls.py  wsgi.py
