[metadata]
name = swordle
version = 0.0.1
description = Competitive Wordle for Hackaway V5

[options]
package_dir =
    =swordle
packages = find:


[options.packages.find]
where = swordle

install_requires =
    Django==4.0.2
    Channels==3.0.4

[options.extras_require]
dev =
    pre-commit==2.17.0